2012-08-18  Per Bothner  <per@bothner.com>

	* lang/Translator.java (errorWithPosition): New convenience method.
	* standard/object.java (scanClassDef): Use it.

2012-08-13  Charles Turner  <chturne@gmail.com>

	* lang/Translator.java (rewriteBody, makeBody): Changed access
	from private to protected for Lisp2Compilation's declare
	processing.

2012-08-13  Charles Turner  <chturne@gmail.com>

	* standard/let.java (let, settingProcedures): Distinguish between flet
	and let.
	* standard/let.java (maybeSetProcedure): New method, sets a
	procedure declaration if its a flet.

2012-08-01  Per Bothner  <per@bothner.com>

	* lang/Translator.java: Use new setPushCurrentScope/setPopCurrentScope
	methods to control re-use of module-level declarations.

2012-07-27  Per Bothner  <per@bothner.com>

	* standard/object.java (scanClassDef): Handle the case when
	method name is a SyntaxForm.

2012-06-08  Per Bothner  <per@bothner.com>

	* lang/SyntaxTemplate.java (convert_template): The 2012-04-18
	fix was incorrect.

2012-05-20  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): Fix typo "target" -> "-target".

2012-05-10  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): Fix error message if --no-xxx passed,
	and xxx is not a known option.

2012-05-03  Per Bothner  <per@bothner.com>

	* standard/define_class.java (scanForDefinitions, rewriteForm): Make
	more robust.  This fixes Savannah bug #36335 "NPE on syntax error".

2012-04-18  Per Bothner  <per@bothner.com>

	* lang/SyntaxTemplate.java (convert_template): Convert SyntaxForm
	symbol to itself. This fixes Savanannah bug #35526 "Nested macro".

2012-04-14  Per Bothner  <per@bothner.com>

	Add "marks" to TemplateScope, match syntax-case spec.
	Each mark corresponds to an application of a macro.
	Fixes Savannah bug #35552: "bound-identifier=?".
	* lang/TemplateScope.java (macroMark): New field.
	(make): Set macroMark field.
	* lang/Translator.java (currentMacroMark): New field.