@@ -1,6 +1,5 @@
 package kawa.standard;
 import kawa.lang.*;
-import gnu.mapping.*;
 import gnu.expr.*;
 import gnu.lists.*;
 
