@@ -1,3 +1,8 @@
+2012-08-18  Charles Turner  <chturne@gmail.com>
+
+	* lang/begin.java: Purged unused imports.
+	* standard/Scheme.java: Purged unused imports.
+
 2012-08-18  Per Bothner  <per@bothner.com>
 
 	* lang/Translator.java (errorWithPosition): New convenience method.
